--- a/entretien.html
+++ b/entretien.html
@@ -11,7 +11,27 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>danyduke</title>
+    <title>DanyDuke</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon-danyduke/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon-danyduke/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon-danyduke/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon-danyduke/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <header>
@@ -30,26 +50,53 @@
       </div>
     </header>
     <section class="third-page">
-        <div class="first-entretien">
-            <div class="card"><img src="p1-image/controle-direction.jpg" alt=""></div>
+      <div class="first-entretien">
+        <div class="card">
+          <img src="p1-image/controle-direction.jpg" alt="" />
         </div>
-        <div class="second-entretien">
-            <div class="card"><img src="p1-image/pont-elevateur.jpg" alt=""></div>
-        </div>
-        <div class="third-entretien">
-            <div class="card"><img src="p1-image/oil-change.jpg" alt=""></div>
-        </div>
-
+      </div>
+      <div class="second-entretien">
+        <div class="card"><img src="p1-image/pont-elevateur.jpg" alt="" /></div>
+      </div>
+      <div class="third-entretien">
+        <div class="card"><img src="p1-image/oil-change.jpg" alt="" /></div>
+      </div>
     </section>
     <footer>
-        <ul class = "social-media">
-         <li class="icon" a href="https://fr-fr.facebook.com/"><img src="p1-image/media-black/facebook-black.svg" alt="lien facebook"></a></li>
-         <li class="icon" a href="https://www.instagram.com/?hl=fr"><img src="p1-image/media-black/instagram-black.svg" alt="lien instagram"></a></li>
-         <li class="icon" a href="https://twitter.com/?lang=fr"><img src="p1-image/media-black/twitter-black.svg" alt="lien twitter"></a></li>
-         <li class="icon" a href="https://www.youtube.com/"><img src="p1-image/media-black/youtube-black.svg" alt="lien youtube"></a></li>
-        </ul>
-        <div class="copyright">Tous droits réservés © Duckman Danyel, Nantes, France | 2022</div>
-        </footer>
+      <ul class="social-media">
+        <li class="icon">
+          <a href="https://fr-fr.facebook.com/"
+            ><img
+              src="p1-image/media-black/facebook-black.svg"
+              alt="lien facebook"
+          /></a>
+        </li>
+        <li class="icon">
+          <a href="https://www.instagram.com/?hl=fr"
+            ><img
+              src="p1-image/media-black/instagram-black.svg"
+              alt="lien instagram"
+          /></a>
+        </li>
+        <li class="icon">
+          <a href="https://twitter.com/?lang=fr"
+            ><img
+              src="p1-image/media-black/twitter-black.svg"
+              alt="lien twitter"
+          /></a>
+        </li>
+        <li class="icon">
+          <a href="https://www.youtube.com/"
+            ><img
+              src="p1-image/media-black/youtube-black.svg"
+              alt="lien youtube"
+          /></a>
+        </li>
+      </ul>
+      <div class="copyright">
+        Tous droits réservés © Duckman Danyel, Nantes, France | 2022
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
