CSS couleur, changement photo

--- a/entretien.html
+++ b/entretien.html
@@ -52,14 +52,16 @@
     <section class="third-page">
       <div class="first-entretien">
         <div class="card">
-          <img src="p1-image/controle-direction.jpg" alt="" />
+          <img src="p1-image/air-filter-mobile.jpg" alt="" />
         </div>
       </div>
       <div class="second-entretien">
-        <div class="card"><img src="p1-image/pont-elevateur.jpg" alt="" /></div>
+        <div class="card">
+          <img src="p1-image/controle-mobile.jpg" alt="" />
+        </div>
       </div>
       <div class="third-entretien">
-        <div class="card"><img src="p1-image/oil-change.jpg" alt="" /></div>
+        <div class="card"><img src="p1-image/oil-mobile.jpg" alt="" /></div>
       </div>
     </section>
     <footer>
