--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       </p>
     </section>
     <div class="contact">
+      <div class="img-form card">
+        <img src="p1-image/lucas-van-oort-RdLdIzuc4xM-unsplash.jpg" alt="" />
+      </div>
       <form class="contact-form">
         <h2>Contactez-nous</h2>
         <input type="text" class="contact-text" placeholder="Votre Nom" />
