--- a/preparation.html
+++ b/preparation.html
@@ -52,26 +52,17 @@
     <section class="second-page">
       <div class="first-preparation">
         <div class="card">
-          <img
-            src="p1-image/Opel-Kadett-C-Caravan-Tracktool-Umbau-Tuning-Restomod-9.jpg"
-            alt=""
-          />
+          <img src="p1-image/prepa-mobile.jpg" alt="" />
         </div>
       </div>
       <div class="second-preparation">
         <div class="card">
-          <img
-            src="p1-image/Opel-Kadett-C-Caravan-Tracktool-Umbau-Tuning-Restomod-13.jpg"
-            alt=""
-          />
+          <img src="p1-image/ducati-mobile.jpg" alt="" />
         </div>
       </div>
       <div class="third-preparation">
         <div class="card">
-          <img
-            src="p1-image/Opel-Kadett-C-Caravan-Tracktool-Umbau-Tuning-Restomod-10.jpg"
-            alt=""
-          />
+          <img src="p1-image/turbo-mobile.jpg" alt="" />
         </div>
       </div>
     </section>
