CSS, ajout texte

--- a/entretien.html
+++ b/entretien.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>DanyDuke</title>
+    <title>DANYDUKE</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -35,12 +35,12 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo">danyduke</a>
+      <a href="#" class="logo">DANYDUKE</a>
       <div class="nav-links">
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="preparation.html">Préparation</a></li>
-          <li><a href="entretien.html">Entretien</a></li>
+          <li class="active"><a href="entretien.html">Entretien</a></li>
         </ul>
       </div>
       <div class="menu-hamburger" onclick="myFunction(this)">
@@ -52,16 +52,45 @@
     <section class="third-page">
       <div class="first-entretien">
         <div class="card">
-          <img src="p1-image/air-filter-mobile.jpg" alt="" />
+          <img
+            src="p1-image/air-filter-mobile.jpg"
+            alt="changement KN"
+            height="427"
+            width="640"
+          />
+          <p class="text-over">
+            Besoin de faire l'entretien sur votre véhicule de compétition?
+            Contactez nous
+          </p>
         </div>
       </div>
       <div class="second-entretien">
         <div class="card">
-          <img src="p1-image/controle-mobile.jpg" alt="" />
+          <img
+            src="p1-image/controle-mobile.jpg"
+            alt="controle train roulant"
+            height="960"
+            width="640"
+          />
+          <p class="text-over">
+            Besoin de faire l'entretien sur votre véhicule en vue d'un contrôle
+            technique? Contactez nous
+          </p>
         </div>
       </div>
       <div class="third-entretien">
-        <div class="card"><img src="p1-image/oil-mobile.jpg" alt="" /></div>
+        <div class="card">
+          <img
+            src="p1-image/oil-mobile.jpg"
+            alt="changement filtre à huile"
+            height="960"
+            width="640"
+          />
+          <p class="text-over">
+            Besoin de faire l'entretien sur votre véhicule de tous les jours?
+            Contactez nous
+          </p>
+        </div>
       </div>
     </section>
     <footer>
