--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>DanyDuke</title>
+    <title>DANYDUKE</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -35,10 +35,10 @@
   </head>
   <body>
     <header class="main-header">
-      <a href="#" class="logo">danyduke</a>
+      <a href="#" class="logo">DANYDUKE</a>
       <div class="nav-links">
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li class="active"><a href="index.html">Accueil</a></li>
           <li><a href="preparation.html">Préparation</a></li>
           <li><a href="entretien.html">Entretien</a></li>
         </ul>
@@ -52,17 +52,20 @@
     <section class="banner"></section>
     <section class="about">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, tenetur?
-        Enim atque libero id odit, quo blanditiis quos, vel alias maiores
-        reiciendis recusandae aliquid fuga labore voluptates dignissimos,
-        expedita architecto sunt impedit! Dolor placeat consectetur voluptatum
-        autem? Quod tempora natus aliquam voluptates sint in quidem nemo, beatae
-        iusto ratione nihil.
+        Spécialiste de la préparation auto et moto, DANYDUKE vous
+        accompagnera dans votre projet.</br> Besoin d'un entretien, de créer un
+        monstre de course ou encore d'une restauration complète d'un véhicule
+        ancien, notre garage vous apportera son savoir faire en méchanique et carrosserie.</br> Situé aux portes de Nantes, venez découvrir nos véhicules préparés visible dans notre showroom, du Lundi au Vendredi de 9h à 18h.
       </p>
     </section>
     <div class="contact">
       <div class="img-form card">
-        <img src="p1-image/lucas-van-oort-RdLdIzuc4xM-unsplash.jpg" alt="" />
+        <img
+          src="p1-image/moteur-edelbrock.jpg"
+          alt="moteur de voiture"
+          height="765"
+          width="640"
+        />
       </div>
       <form class="contact-form">
         <h2>Contactez-nous</h2>
