--- a/preparation.html
+++ b/preparation.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>DanyDuke</title>
+    <title>DANYDUKE</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -35,11 +35,11 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo">danyduke</a>
+      <a href="#" class="logo">DANYDUKE</a>
       <div class="nav-links">
         <ul>
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="preparation.html">Préparation</a></li>
+          <li class="active"><a href="preparation.html">Préparation</a></li>
           <li><a href="entretien.html">Entretien</a></li>
         </ul>
       </div>
@@ -52,17 +52,44 @@
     <section class="second-page">
       <div class="first-preparation">
         <div class="card">
-          <img src="p1-image/prepa-mobile.jpg" alt="" />
+          <img
+            src="p1-image/prepa-mobile.jpg"
+            alt="moteur voiture préparé"
+            height="960"
+            width="640"
+          />
+          <p class="text-over">
+            Besoin de gagner 50,100 ou 1000 chevaux? D'une cartographie
+            sur-mesure? Contactez nous
+          </p>
         </div>
       </div>
       <div class="second-preparation">
         <div class="card">
-          <img src="p1-image/ducati-mobile.jpg" alt="" />
+          <img
+            src="p1-image/ducati-mobile.jpg"
+            alt="ducati panigale"
+            height="960"
+            width="640"
+          />
+          <p class="text-over">
+            Besoin de supsensions performantes? De jantes en carbone? Contactez
+            nous
+          </p>
         </div>
       </div>
       <div class="third-preparation">
         <div class="card">
-          <img src="p1-image/turbo-mobile.jpg" alt="" />
+          <img
+            src="p1-image/turbo-mobile.jpg"
+            alt="turbo garrett"
+            height="960"
+            width="640"
+          />
+          <p class="text-over">
+            Besoin de passer un moteur atmosphérique en turbo? Voir d'un
+            deuxième turbo? Contactez nous
+          </p>
         </div>
       </div>
     </section>
