--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
     <section class="banner"></section>
     <section class="about">
       <p>
-        Spécialiste de la préparation auto et moto, DANYDUKE vous
-        accompagnera dans votre projet.</br> Besoin d'un entretien, de créer un
-        monstre de course ou encore d'une restauration complète d'un véhicule
-        ancien, notre garage vous apportera son savoir faire en méchanique et carrosserie.</br> Situé aux portes de Nantes, venez découvrir nos véhicules préparés visible dans notre showroom, du Lundi au Vendredi de 9h à 18h.
+        Spécialiste de la préparation auto et moto, DANYDUKE vous accompagnera
+        dans votre projet.<br />
+        Besoin d'un entretien, de créer un monstre de course ou encore d'une
+        restauration complète d'un véhicule ancien, notre garage vous apportera
+        son savoir faire en méchanique et carrosserie.<br />
+        Situé aux portes de Nantes, venez découvrir nos véhicules préparés
+        visible dans notre showroom, du Lundi au Vendredi de 9h à 18h.
       </p>
     </section>
     <div class="contact">
