correction btn, html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         dans votre projet.<br />
         Besoin d'un entretien, de créer un monstre de course ou encore d'une
         restauration complète d'un véhicule ancien, notre garage vous apportera
-        son savoir faire en méchanique et carrosserie.<br />
+        son savoir faire en mécanique et carrosserie.<br />
         Situé aux portes de Nantes, venez découvrir nos véhicules préparés
         visible dans notre showroom, du Lundi au Vendredi de 9h à 18h.
       </p>
