--- a/preparation.html
+++ b/preparation.html
@@ -60,7 +60,7 @@
           />
           <p class="text-over">
             Besoin de gagner 50,100 ou 1000 chevaux? D'une cartographie
-            sur-mesure? Contactez nous
+            sur-mesure? Contactez-nous!
           </p>
         </div>
       </div>
@@ -73,8 +73,8 @@
             width="640"
           />
           <p class="text-over">
-            Besoin de supsensions performantes? De jantes en carbone? Contactez
-            nous
+            Besoin de supsensions performantes? De jantes en carbone?
+            Contactez-nous!
           </p>
         </div>
       </div>
@@ -88,7 +88,7 @@
           />
           <p class="text-over">
             Besoin de passer un moteur atmosphérique en turbo? Voir d'un
-            deuxième turbo? Contactez nous
+            deuxième turbo? Contactez-nous!
           </p>
         </div>
       </div>
