--- a/entretien.html
+++ b/entretien.html
@@ -60,7 +60,7 @@
           />
           <p class="text-over">
             Besoin de faire l'entretien sur votre véhicule de compétition?
-            Contactez nous
+            Contactez-nous!
           </p>
         </div>
       </div>
@@ -74,7 +74,7 @@
           />
           <p class="text-over">
             Besoin de faire l'entretien sur votre véhicule en vue d'un contrôle
-            technique? Contactez nous
+            technique? Contactez-nous!
           </p>
         </div>
       </div>
@@ -88,7 +88,7 @@
           />
           <p class="text-over">
             Besoin de faire l'entretien sur votre véhicule de tous les jours?
-            Contactez nous
+            Contactez-nous!
           </p>
         </div>
       </div>
