--- a/index.html
+++ b/index.html
@@ -72,11 +72,22 @@
       </div>
       <form class="contact-form">
         <h2>Contactez-nous</h2>
-        <input type="text" class="contact-text" placeholder="Votre Nom" />
-        <input type="email" class="contact-text" placeholder="Votre Email" />
+        <input
+          type="text"
+          class="contact-text"
+          placeholder="Votre Nom"
+          required="required"
+        />
+        <input
+          type="email"
+          class="contact-text"
+          placeholder="Votre Email"
+          required="required"
+        />
         <textarea
           class="contact-text area"
           placeholder="Votre Message"
+          required="required"
         ></textarea>
         <button class="btn">Envoyer</button>
       </form>
